[Navigation] Fix sub nav item spacing when no icon is present

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -519,3 +519,7 @@ $secondary-item-font-size: rem(15px);
   height: rem(10px);
   width: rem(10px);
 }
+// stylelint-disable-next-line selector-max-combinators, selector-max-class
+.Navigation-newDesignLanguage .SecondaryNavigation-noIcon .Item {
+  padding-left: spacing();
+}
